# SICXE-One-Pass-Assembler

./: .gitignore  Assembler report.docx  CMakeLists.txt  Interpreter.cpp  Interpreter.h  LiteralTable.cpp  LiteralTable.h  Parser.cpp  Parser.h  Q2.txt  README.md  SymbolTable.cpp  SymbolTable.h  hi.txt  main.cpp  test.txt
Include/: Interpreter.h  LiteralTable.h  OPTable.h  OperandParser.h  Parser.h  Registers.h  SymbolTable.h  Writer.h
src/: Interpreter.cpp  LiteralTable.cpp  OPTable.cpp  OperandParser.cpp  Parser.cpp  Registers.cpp  SymbolTable.cpp  Writer.cpp  main.cpp
